# homeserver

./: .dockerignore  .gitignore  Makefile  README.md  pyproject.toml
.claude/: settings.json
k8s/jellyfin/: deployment.yaml  pv.yaml  service.yaml
k8s/media-server/: README.md  deploy.sh  media-storage-pv.yaml  setup-cluster.sh  setup-host-k3s.sh
k8s/media-server/flaresolverr/: deployment.yaml  service.yaml
k8s/media-server/gpu/: nvidia-device-plugin.yaml
k8s/media-server/jellyfin/: deployment.yaml  pv.yaml  service.yaml
k8s/media-server/jellyseerr/: deployment.yaml  pv.yaml  service.yaml
k8s/media-server/prowlarr/: deployment.yaml  pv.yaml  service.yaml
k8s/media-server/qbittorrent/: deployment.yaml  pv.yaml  service.yaml
k8s/media-server/radarr/: deployment.yaml  pv.yaml  service.yaml
k8s/media-server/sonarr/: deployment.yaml  pv.yaml  service.yaml
k8s/photography-server/: api.yaml  configmap.yaml  deploy.sh  frontend.yaml  namespace.yaml  photos-pv.yaml  postgres.yaml  sync-worker.yaml
k8s/wedding/: README.md  build-images.sh  cluster-issuer.yaml  deploy.sh  ingress.yaml  migrate-job.yaml  namespace.yaml  secrets.example.yaml  setup-cert-manager.sh
k8s/wedding/api/: configmap.yaml  deployment.yaml  pv.yaml  service.yaml
k8s/wedding/frontend/: deployment.yaml  service.yaml
k8s/wedding/postgres/: deployment.yaml  pv.yaml  service.yaml
photographyserver/: Makefile
photographyserver/api/: Dockerfile  pyproject.toml  run.py
photographyserver/frontend/: Dockerfile
photographyserver/sync_worker/: Dockerfile  main.py
scripts/: py_format.sh
