[project]
name = "homeserver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hatchling>=1.27.0",
]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E", # Errors
    "F", # Pyflakes
    "N", # Naming conventions
    "Q", # Complexity
    "T", # Type annotations
    "ANN", # Annotations
]
ignore = [
    "S101" # `assert` usage
]

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = ["ANN"]  # Ignore type annotation requirements in test files
